--- a/index.html
+++ b/index.html
@@ -759,6 +759,7 @@
     border: none;
     cursor: pointer;
     transition: transform 0.3s;
+    z-index: 9999;
 }
 .fab:hover {
     transform: scale(1.1);
